# redis-feature-flags

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docs.md  stats.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-java.yml  publish-python.yml  test-go.yml  test-java.yml  test-python.yml
cli/: .gitignore  README.md  pyproject.toml
cli/redis_flags/: __init__.py  config.py  connection.py  main.py  output.py
cli/redis_flags/commands/: __init__.py  cohort.py  flag.py  history.py  user.py
cli/tests/: test_cohort.py  test_config.py  test_connection.py  test_flag.py  test_main.py  test_user.py
docs/: cli.md  docs.md  java.md  python.md
sdks/go/: cache.go  cohorts.go  errors.go  evaluator.go  feature_flags.go  feature_flags_test.go  go.mod  schema.go  utils.go
sdks/java/: pom.xml
sdks/java/benchmarks/: results.md
sdks/java/src/main/java/com/redisfeatureflags/: CohortManager.java  Evaluator.java  FeatureFlags.java  JedisProvider.java  LocalCache.java  SchemaKeys.java  Utils.java
sdks/java/src/main/java/com/redisfeatureflags/exceptions/: CohortNotFoundError.java  FlagNotFoundError.java  InvalidRolloutError.java  RedisConnectionError.java  RedisFlagError.java  SchemaVersionError.java
sdks/java/src/main/java/com/redisfeatureflags/spring/: FeatureFlagsAutoConfiguration.java  FeatureFlagsProperties.java
sdks/java/src/test/java/com/redisfeatureflags/: BenchmarkTest.java
sdks/java/src/test/java/com/redisfeatureflags/e2e/: CohortManagerTest.java  EvaluatorTest.java  FeatureFlagsTest.java
sdks/java/src/test/java/com/redisfeatureflags/unit/: EvaluatorUnitTest.java  (+4 more)
sdks/python/: README.md  docs.md  pyproject.toml
sdks/python/benchmarks/python/: benchmark.py  results.md
sdks/python/redis_feature_flags/: __init__.py  cache.py  client.py  cohorts.py  evaluator.py  exceptions.py  schema.py  utils.py
sdks/python/tests/: test_cache.py  test_client.py  test_cohorts.py  test_evaluator.py  test_exceptions.py  test_schema.py  test_utils.py
sdks/python/tests/e2e/: README.md  conftest.py  constants.py  test_cli.py  test_cohorts.py  test_environments.py  test_evaluation.py  test_flag_lifecycle.py
spec/: evaluation_spec.json
