[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-flags"
version = "0.1.0"
description = "CLI for redis-feature-flags — manage feature flags from your terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["redis", "feature-flags", "cli"]
dependencies = [
    "redis>=4.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w",
    "redis-feature-flags>=0.1.0",
]

[project.scripts]
redis-flags = "redis_flags.main:app"

[tool.hatch.build.targets.wheel]
packages = ["redis_flags"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "fakeredis>=2.0",
    "typer[testing]>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=redis_flags --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["redis_flags"]
omit = ["tests/*"]